# p9_data_pipeline_redpanda_pyspark

./: .env.example  .gitignore  README.md  bootstrap.yml  docker-compose.yml  pyproject.toml
ticket_processor/: Dockerfile.processor  ticket_processor.py
ticket_producer/: Dockerfile.producer  ticket_producer.py
